Java 19 craziness (doesn't work)